Changes: - Moved to fabric only - started phasing out greenhouseconfig - started migrating out of 1.21.1 codec to json