@@ -1,20 +1,16 @@
 package umpaz.brewinandchewin.common.crafting;
 
+import com.google.gson.JsonArray;
+import com.google.gson.JsonElement;
+import com.google.gson.JsonObject;
 import com.mojang.datafixers.util.Either;
-import com.mojang.serialization.Codec;
-import com.mojang.serialization.MapCodec;
-import com.mojang.serialization.codecs.RecordCodecBuilder;
-import net.minecraft.core.HolderLookup;
 import net.minecraft.core.NonNullList;
-import net.minecraft.network.RegistryFriendlyByteBuf;
-import net.minecraft.network.codec.ByteBufCodecs;
-import net.minecraft.network.codec.StreamCodec;
+import net.minecraft.core.RegistryAccess;
+import net.minecraft.network.FriendlyByteBuf;
+import net.minecraft.resources.ResourceLocation;
+import net.minecraft.util.GsonHelper;
 import net.minecraft.world.item.ItemStack;
-import net.minecraft.world.item.crafting.CraftingInput;
-import net.minecraft.world.item.crafting.Ingredient;
-import net.minecraft.world.item.crafting.Recipe;
-import net.minecraft.world.item.crafting.RecipeSerializer;
-import net.minecraft.world.item.crafting.RecipeType;
+import net.minecraft.world.item.crafting.*;
 import net.minecraft.world.level.Level;
 import umpaz.brewinandchewin.client.recipebook.FermentingBookCategory;
 import umpaz.brewinandchewin.common.BnCConfiguration;
@@ -24,15 +20,14 @@ import umpaz.brewinandchewin.common.registry.BnCRecipeTypes;
 import umpaz.brewinandchewin.common.utility.BnCRecipeUtils;
 import umpaz.brewinandchewin.common.utility.AbstractedFluidStack;
 import umpaz.brewinandchewin.common.utility.FluidUnit;
-import umpaz.brewinandchewin.common.utility.KegRecipeWrapper;
+import umpaz.brewinandchewin.common.utility.KegContainer;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.function.Function;
 
-public class KegFermentingRecipe implements Recipe<KegRecipeWrapper> {
+public class KegFermentingRecipe implements Recipe<KegContainer> {
     public static final int INPUT_SLOTS = 4;
 
     private final NonNullList<Ingredient> inputItems;
@@ -54,7 +49,7 @@ public class KegFermentingRecipe implements Recipe<KegRecipeWrapper> {
         this.fluidIngredient = fluidIngredient;
         this.unit = unit;
         if (unit.isPresent() && result.left().isPresent())
-            this.result = Either.left(new AbstractedFluidStack(result.left().get().fluid(), result.left().get().amount(), result.left().get().components(), unit.get(), result.left().get().loaderSpecific()));
+            this.result = Either.left(new AbstractedFluidStack(result.left().get().fluid(), result.left().get().amount(), unit.get(), result.left().get().loaderSpecific()));
         else
             this.result = result;
         this.experience = experience;
@@ -87,8 +82,7 @@ public class KegFermentingRecipe implements Recipe<KegRecipeWrapper> {
         return result;
     }
 
-    @Override
-    public ItemStack assemble(KegRecipeWrapper inv, HolderLookup.Provider access) {
+    public ItemStack assemble(KegContainer inv, RegistryAccess access) {
         return ItemStack.EMPTY;
     }
 
@@ -104,20 +98,40 @@ public class KegFermentingRecipe implements Recipe<KegRecipeWrapper> {
         return this.temperature;
     }
 
-    @Override
-    public boolean matches(KegRecipeWrapper inv, Level level) {
+    public boolean matches(KegContainer container, Level level) {
         List<ItemStack> inputs = new ArrayList<>();
 
-        for (int j = 0; j < INPUT_SLOTS; ++j) {
-            ItemStack itemstack = inv.getItem(j);
+        for (int i = 0; i < INPUT_SLOTS; ++i) {
+            ItemStack itemstack = container.getItem(i);
             if (!itemstack.isEmpty()) {
                 inputs.add(itemstack);
             } else
                 inputs.add(ItemStack.EMPTY);
         }
-        CraftingInput input = CraftingInput.of(2, 2, inputs);
-        return input.size() == 1 && inputItems.size() == 1 ? inputItems.getFirst().test(input.getItem(0)) : input.stackedContents().canCraft(this, null) &&
-                (fluidIngredient.isEmpty() && inv.getFluid().isEmpty() || fluidIngredient.isPresent() && !inv.getFluid().isEmpty() && fluidIngredient.get().ingredient().matches(inv.getFluid()) && inv.getFluid().amount() % fluidIngredient.get().amount() == 0);
+
+        if (inputItems.size() == 1) {
+            Ingredient ingredient = inputItems.get(0);
+            return ingredient.test(inputs.get(0)) && fluidMatches(container);
+        }
+
+        // For multiple-item recipes, manually check each ingredient
+        if (inputItems.size() == inputs.size()) {
+            for (int i = 0; i < inputs.size(); i++) {
+                if (!inputItems.get(i).test(inputs.get(i))) return false;
+            }
+            return fluidMatches(container);
+        }
+        return false;
+    }
+
+    private boolean fluidMatches(KegContainer container) {
+        if (fluidIngredient.isEmpty() && container.getFluid().isEmpty()) return true;
+        if (fluidIngredient.isPresent() && !container.getFluid().isEmpty()) {
+            var fluid = container.getFluid();
+            var ingredient = fluidIngredient.get();
+            return ingredient.ingredient().matches(fluid) && fluid.amount() % ingredient.amount() == 0;
+        }
+        return false;
     }
 
     @Override
@@ -126,11 +140,11 @@ public class KegFermentingRecipe implements Recipe<KegRecipeWrapper> {
     }
 
     @Override
-    public ItemStack getResultItem(HolderLookup.Provider registryAccess) {
+    public ItemStack getResultItem(RegistryAccess registryAccess) {
         if (result.right().isPresent())
             return result.right().get().copy();
         if (result.left().isPresent())
-            return BnCRecipeUtils.getPouredItemFromFluid(new AbstractedFluidStack(result.left().get().fluid(), BnCConfiguration.COMMON_CONFIG.get().keg().localizedCapacity(), result.left().get().components(), BnCConfiguration.COMMON_CONFIG.get().keg().capacityUnit(), null));
+            return BnCRecipeUtils.getPouredItemFromFluid(new AbstractedFluidStack(result.left().get().fluid(), 81000L, FluidUnit.DROPLET, null));
         return ItemStack.EMPTY;
     }
 
@@ -147,6 +161,11 @@ public class KegFermentingRecipe implements Recipe<KegRecipeWrapper> {
     @Override
     public ItemStack getToastSymbol() {
         return new ItemStack(BnCItems.KEG);
+    }
+
+    @Override
+    public ResourceLocation getId() {
+        return null;
     }
 
     @Override
@@ -177,51 +196,132 @@ public class KegFermentingRecipe implements Recipe<KegRecipeWrapper> {
     }
 
     public static class Serializer implements RecipeSerializer<KegFermentingRecipe> {
-        public static final MapCodec<KegFermentingRecipe> CODEC = RecordCodecBuilder.mapCodec(inst -> inst.group(
-                Ingredient.CODEC.listOf(1, 4).xmap(ingredients -> NonNullList.of(Ingredient.EMPTY, ingredients.toArray(Ingredient[]::new)), Function.identity()).fieldOf("ingredients").forGetter(KegFermentingRecipe::getIngredients),
-                FermentingBookCategory.CODEC.optionalFieldOf("category", FermentingBookCategory.DRINKS).forGetter(KegFermentingRecipe::getRecipeBookCategory),
-                FluidIngredientWithAmount.CODEC.optionalFieldOf("base_fluid").forGetter(KegFermentingRecipe::getFluidIngredient),
-                FluidUnit.CODEC.optionalFieldOf("unit").forGetter(KegFermentingRecipe::getRawUnit),
-                Codec.either(AbstractedFluidStack.CODEC, ItemStack.CODEC).fieldOf("result").forGetter(KegFermentingRecipe::getResult),
-                Codec.FLOAT.optionalFieldOf("experience", 0.0F).forGetter(KegFermentingRecipe::getExperience),
-                Codec.INT.optionalFieldOf("fermenting_time", 9600).forGetter(KegFermentingRecipe::getFermentTime),
-                Codec.INT.optionalFieldOf("temperature", 3).forGetter(KegFermentingRecipe::getTemperature)
-        ).apply(inst, KegFermentingRecipe::new));
-        public static final StreamCodec<RegistryFriendlyByteBuf, KegFermentingRecipe> STREAM_CODEC = StreamCodec.of(KegFermentingRecipe.Serializer::toNetwork, KegFermentingRecipe.Serializer::fromNetwork);
-
         public Serializer() {
         }
 
-        public MapCodec<KegFermentingRecipe> codec() {
-            return CODEC;
+        @Override
+        public KegFermentingRecipe fromJson(ResourceLocation id, JsonObject json) {
+            // parse ingredients
+            // parse optional fields (category, fluidIngredient, etc.)
+            // return new KegFermentingRecipe(...)
+
+            JsonArray ingredientsArray = GsonHelper.getAsJsonArray(json, "ingredients");
+            NonNullList<Ingredient> ingredients = NonNullList.withSize(ingredientsArray.size(), Ingredient.EMPTY);
+            for (int i = 0; i < ingredientsArray.size(); i++) {
+                ingredients.set(i, Ingredient.fromJson(ingredientsArray.get(i)));
+            }
+
+            // Optional category
+            FermentingBookCategory category = FermentingBookCategory.DRINKS;
+            if (json.has("category")) {
+                category = FermentingBookCategory.fromString(json.get("category").getAsString());
+            }
+
+            // Optional fluid ingredient
+            Optional<FluidIngredientWithAmount> fluidIngredient = Optional.empty();
+            if (json.has("base_fluid")) {
+                fluidIngredient = Optional.of(FluidIngredientWithAmount.fromJson(json.get("base_fluid")));
+            }
+
+            // Optional unit
+            Optional<FluidUnit> fluidUnit = Optional.empty();
+            if (json.has("unit")) {
+                fluidUnit = Optional.of(FluidUnit.fromJson(json.get("unit")));
+            }
+
+            // Result: either fluid stack or item stack
+            Either<AbstractedFluidStack, ItemStack> result;
+            if (json.has("result")) {
+                JsonElement resultElement = json.get("result");
+                if (resultElement.isJsonObject() && resultElement.getAsJsonObject().has("fluid")) {
+                    result = Either.left(AbstractedFluidStack.fromJson(resultElement));
+                } else {
+                    result = Either.right(ShapedRecipe.itemStackFromJson(resultElement.getAsJsonObject()));
+                }
+            } else {
+                result = Either.right(ItemStack.EMPTY);
+            }
+
+            // Optional fields
+            float experience = GsonHelper.getAsFloat(json, "experience", 0.0F);
+            int fermentTime = GsonHelper.getAsInt(json, "fermenting_time", 9600);
+            int temperature = GsonHelper.getAsInt(json, "temperature", 3);
+
+            return new KegFermentingRecipe(
+                    ingredients, category, fluidIngredient, fluidUnit,
+                    result, experience, fermentTime, temperature
+            );
         }
 
-        public StreamCodec<RegistryFriendlyByteBuf, KegFermentingRecipe> streamCodec() {
-            return STREAM_CODEC;
-        }
+        @Override
+        public void toNetwork(FriendlyByteBuf buf, KegFermentingRecipe recipe) {
+            // Write ingredients
+            buf.writeVarInt(recipe.getIngredients().size());
+            for (Ingredient ingredient : recipe.getIngredients()) {
+                ingredient.toNetwork(buf);
+            }
 
-        public static void toNetwork(RegistryFriendlyByteBuf buf, KegFermentingRecipe recipe) {
-            Ingredient.CONTENTS_STREAM_CODEC.apply(ByteBufCodecs.list(4)).encode(buf, recipe.getIngredients());
-            FermentingBookCategory.STREAM_CODEC.encode(buf, recipe.getRecipeBookCategory());
-            ByteBufCodecs.optional(FluidIngredientWithAmount.STREAM_CODEC).encode(buf, recipe.getFluidIngredient());
-            ByteBufCodecs.optional(FluidUnit.STREAM_CODEC).encode(buf, recipe.getRawUnit());
-            ByteBufCodecs.either(AbstractedFluidStack.STREAM_CODEC, ItemStack.STREAM_CODEC).encode(buf, recipe.getResult());
+            // Category
+            buf.writeUtf(recipe.getRecipeBookCategory().name());
+
+            // Optional fluid ingredient
+            buf.writeBoolean(recipe.getFluidIngredient().isPresent());
+            recipe.getFluidIngredient().ifPresent(f -> f.toNetwork(buf));
+
+            // Optional fluid unit
+            buf.writeBoolean(recipe.getRawUnit().isPresent());
+            recipe.getRawUnit().ifPresent(f -> f.toNetwork(buf));
+
+            // Result
+            if (recipe.getResult().left().isPresent()) {
+                buf.writeBoolean(true);
+                recipe.getResult().left().get().toNetwork(buf);
+            } else {
+                buf.writeBoolean(false);
+                buf.writeItem(recipe.getResult().right().orElse(ItemStack.EMPTY));
+            }
+
+            // Experience, fermentTime, temperature
             buf.writeFloat(recipe.getExperience());
             buf.writeInt(recipe.getFermentTime());
             buf.writeInt(recipe.getTemperature());
         }
 
-        public static KegFermentingRecipe fromNetwork(RegistryFriendlyByteBuf buf) {
-            NonNullList<Ingredient> ingredients = NonNullList.of(Ingredient.EMPTY, Ingredient.CONTENTS_STREAM_CODEC.apply(ByteBufCodecs.list(4)).decode(buf).toArray(Ingredient[]::new));
-            FermentingBookCategory category = FermentingBookCategory.STREAM_CODEC.decode(buf);
-            Optional<FluidIngredientWithAmount> fluidIngredient = ByteBufCodecs.optional(FluidIngredientWithAmount.STREAM_CODEC).decode(buf);
-            Optional<FluidUnit> fluidUnit = ByteBufCodecs.optional(FluidUnit.STREAM_CODEC).decode(buf);
-            Either<AbstractedFluidStack, ItemStack> result = ByteBufCodecs.either(AbstractedFluidStack.STREAM_CODEC, ItemStack.STREAM_CODEC).decode(buf);
+        @Override
+        public KegFermentingRecipe fromNetwork(ResourceLocation resourceLocation, FriendlyByteBuf buf) {
+            // Ingredients
+            int size = buf.readVarInt();
+            NonNullList<Ingredient> ingredients = NonNullList.withSize(size, Ingredient.EMPTY);
+            for (int i = 0; i < size; i++) {
+                ingredients.set(i, Ingredient.fromNetwork(buf));
+            }
+
+            // Category
+            FermentingBookCategory category = FermentingBookCategory.fromString(buf.readUtf());
+
+            // Optional fluid ingredient
+            Optional<FluidIngredientWithAmount> fluidIngredient = buf.readBoolean() ? Optional.of(FluidIngredientWithAmount.fromNetwork(buf)) : Optional.empty();
+
+            // Optional fluid unit
+            Optional<FluidUnit> fluidUnit = buf.readBoolean() ? Optional.of(FluidUnit.fromNetwork(buf)) : Optional.empty();
+
+            // Result
+            Either<AbstractedFluidStack, ItemStack> result;
+            if (buf.readBoolean()) {
+                result = Either.left(AbstractedFluidStack.fromNetwork(buf));
+            } else {
+                result = Either.right(buf.readItem());
+            }
+
+            // Experience, fermentTime, temperature
             float experience = buf.readFloat();
-            int fermentingTime = buf.readInt();
+            int fermentTime = buf.readInt();
             int temperature = buf.readInt();
 
-            return new KegFermentingRecipe(ingredients, category, fluidIngredient, fluidUnit, result, experience, fermentingTime, temperature);
+            return new KegFermentingRecipe(
+                    ingredients, category, fluidIngredient, fluidUnit,
+                    result, experience, fermentTime, temperature
+            );
         }
     }
 }
